fix(app-our-work-single): update positioning and spacing for mobile

--- a/src/pages/app-our-work-single/app-our-work-single.scss
+++ b/src/pages/app-our-work-single/app-our-work-single.scss
@@ -131,6 +131,7 @@
         }
       }
     }
+
     h2 {
       color: $gray-dark;
       font-family: 'Muli';
@@ -145,8 +146,11 @@
       }
 
       @include media-breakpoint-down(sm) {
+        line-height: normal;
+        margin-bottom: 2rem;
+        margin-left: 25px;
         text-align: left;
-        padding: 0 28px;
+        width: 70%;
       }
 
       @include media-breakpoint-down(xs) {
@@ -174,7 +178,7 @@
     .project-content-icons {
       @include media-breakpoint-down(sm) {
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         margin-top: 60px;
       }
 
@@ -182,7 +186,7 @@
         margin: 10px 40px 10px 0;
 
         @include media-breakpoint-down(sm) {
-          margin: 10px 20px 10px 0;
+          margin: 0 10px;
         }
       }
     }
@@ -192,12 +196,8 @@
 
       @include media-breakpoint-down(sm) {
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         margin-top: 140px;
-      }
-
-      a {
-        margin: 10px 20px 10px 0;
       }
     }
   }
@@ -397,6 +397,7 @@
 
         .images-col {
           position: relative;
+
           img {
             width: 150px;
             height: 300px;
